# cli

./: README.md  pyproject.toml
gener8app/: main.py
tests/: test_main.py
